BUG: Splash clipped on small mobile

--- a/coastal-hazards-portal/src/main/webapp/css/index/application.css
+++ b/coastal-hazards-portal/src/main/webapp/css/index/application.css
@@ -15,6 +15,7 @@ html, body {
     height: 100%;
     border: 0px;
     padding: 0px;
+    font-size: 100%;
 }
 
 /*
